# prueba-de-programacion

./: .gitignore  CMakeLists.txt  COMPILATION_GUIDE.md  CONTRIBUTING.md  GUI.h  GUI_BUILD_GUIDE.md  GUI_UPDATE.md  Makefile  PROJECT_SUMMARY.md  QUICK_START_GUI.md  README.de.md  README.es.md  README.ja.md  README.md  REFACTORING_SUMMARY.md  TicTacToe.cpp  TicTacToe.h
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: ALGORITHM_DOCUMENTATION.md
src/: GUI.cpp  GUI.h  TicTacToe.cpp  TicTacToe.h  main-gui.cpp  main.cpp
